# CzModManager

./: LISTENCE  README.md  cp.json  package-lock.json  package.json  vite.config.ts
res/: config.json  cp.css  dark.css  dark.css.map  donadona.css  games.json  honkai_starrail.json  light.css  light.css.map  light.scss  style.css  wuthering_waves.json
src/: App.vue  data.json  lang.json  var.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/res/: comic.scss  config.json  dark.css  dark.scss  games.json  light.css  light.scss  style1.css  zenless_zone_zero.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/component/CzDialog/: CzDialog.ts  CzDialog.vue
src/component/CzPreview/: CzPreview.vue
src/component/CzSelect/: CzSelect.ts  CzSelect.vue
src/component/CzSwitch/: CzSwitch.vue
src/component/MessageQue/: MessageQue.vue  messageQue.ts
src/pages/: GameMods.vue  Setting.vue
