[package]
name = "genshin-skin-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "genshin_skin_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
sevenz-rust = "0.6.1"
zip = "4.3.0"
actix-web = "4.11.0"
tokio = "1.47.0"
actix-files = "0.6.6"
ini = "1.3.0"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
nanoid = "0.4.0"
